# urge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md  Readme.md
app/: CMakeLists.txt  urge_main.cc
app/resources/: app.rc
base/: CMakeLists.txt
base/bind/: bind.h  bind_internal.h  callback.h  callback_forward.h  callback_helpers.h  callback_internal.h  callback_list.h  cancelable_callback.h
base/buildflags/: build.h  compiler_specific.h
base/debug/: logging.cc  logging.h
base/math/: rectangle.cc  rectangle.h  transform.h
base/memory/: allocator.cc  atomic_flag.cc  atomic_flag.h  atomic_ref_count.h  auto_reset.h  lock.h  lock_impl.h  raw_scoped_refptr_mismatch_checker.h  ref_counted.h  scoped_refptr.h  stack_allocated.h  weak_ptr.h
base/template/: linked_list.cc  linked_list.h
base/thread/: thread_checker.h
binding/: CMakeLists.txt
binding/cruby/: CMakeLists.txt  cruby_entry.cc  cruby_entry.h  cruby_file.cc  cruby_file.h  cruby_util.cc  cruby_util.h
binding/idl/: export.json
binding/interface/: engine_defines.json
binding/mri/: CMakeLists.txt  init_bitmap.cc  init_graphics.cc  mri_main.cc
binding/unittests/: CMakeLists.txt  binding_unittests.cc  binding_unittests.h
buildtools/: build_file_binary.py
components/: CMakeLists.txt
components/filesystem/: CMakeLists.txt  io_service.cc  io_service.h  stream_wrapper.h
components/version/: CMakeLists.txt  build_version.py
content/: CMakeLists.txt  content_config.h
content/app/: runner.cc  runner.h
content/binding/: external_binding.cc  external_binding.h
content/common/: content_utils.h  disposable.h  exception.h  object.h  tileutils.cc  tileutils.h  utility.h  vector.h
content/config/: engine_config.cc  engine_config.h
content/gpu/: gpu.cc  gpu.h  gpu_command.cc  gpu_command.h  gpu_device.cc  gpu_device.h  gpu_resource.cc  gpu_resource.h
content/profile/: core_profile.cc  core_profile.h
content/public/: bitmap.cc  bitmap.h  disposable.cc  disposable.h  drawable.cc  drawable.h  graphics.cc  graphics.h  plane.cc  plane.h  sprite.cc  sprite.h  tilemap.cc  tilemap.h  tilemap2.cc  tilemap2.h  viewport.cc  viewport.h  window.cc  window.h  window2.cc  window2.h
content/render/: camera.cc  camera.h  frustum.h  graphics.cc  graphics.h  light.cc  light.h  renderer.cc  renderer.h  viewport.cc  viewport.h
content/resource/: material.cc  material.h  mesh.cc  mesh.h  texture.cc  texture.h
content/scene/: camera.cc  camera.h  node.cc  node.h  node_link.cc  node_link.h  renderer.cc  renderer.h  transform.cc  transform.h  world.cc  world.h
content/worker/: engine_worker.cc  engine_worker.h
doc/: Game.yaml
renderer/: CMakeLists.txt  renderer_config.h
renderer/device/: render_device.cc  render_device.h
renderer/drawable/: quad_array.cc  quad_array.h  quad_drawable.cc  quad_drawable.h  vertex_layout.cc  vertex_layout.h
renderer/hlsl/: alphatrans_ps.hlsl  base_ps.hlsl  base_vs.hlsl  basealpha_ps.hlsl  basealpha_vs.hlsl  basecolor_ps.hlsl  basecolor_vs.hlsl  blt_ps.hlsl  flat_ps.hlsl  sprite_ps.hlsl  tilemap2_vs.hlsl  tilemap_vs.hlsl  transform_vs.hlsl  vaguetrans_ps.hlsl  viewport_ps.hlsl
renderer/pipeline/: render_pipeline.cc  render_pipeline.h
ui/: CMakeLists.txt
ui/context/: imgui_context.cc  imgui_context.h
ui/widget/: widget.cc  widget.h
unittests/: CMakeLists.txt  renderer_unittests.cc
